--- a/app/src/main/res/layout/activity_daly_weather.xml
+++ b/app/src/main/res/layout/activity_daly_weather.xml
@@ -20,11 +20,10 @@
         android:textStyle="bold" />
 
     <ListView
+        android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="89dp" />
-
 
 </RelativeLayout >
