--- a/app/src/main/res/layout/activity_hourly.xml
+++ b/app/src/main/res/layout/activity_hourly.xml
@@ -9,22 +9,23 @@
 
 
     <TextView
-        android:id="@+id/minuto"
+        android:id="@+id/minutlytitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="79dp"
-        android:layout_marginTop="23dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp"
         android:text="Minutly Forescast"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         android:textStyle="bold" />
 
     <ListView
+        android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="492dp"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="75dp" />
+        android:layout_marginTop="89dp"
+
+         />
 </RelativeLayout >
