--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -20,10 +20,9 @@
         android:textStyle="bold" />
 
     <ListView
-        android:layout_width="369dp"
-        android:layout_height="489dp"
-        android:layout_alignParentStart="true"
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="78dp" />
+        android:layout_marginTop="89dp"  />
 </RelativeLayout >
